--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <h2 class="title-products">Catalogo de Vinos Malbec</h2>
     <div class="products-Malbec">
       <!-- TEMPLATE DE CADA PRODUCTO -->
-      <template id="template-card">
+      <template id="template-card">s
         <div class="card">
           <img class="main-img" src="" alt="">
           <div class="back">
