--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section class="carrito-window">
     <div class="carrito-visible">
       <p>Vinoteka Tienda</p>
-      <p>Tu carrito esta vacio</p>
+      <p>Tu carrito está vacío</p>
     </div>
     <!-- TEMPLATE DEL CARRITO -->
     <template id="template-carrito">
@@ -68,7 +68,7 @@
   </div>
   <!-- SECCION INGRESOS SLIDER -->
   <section class="news">
-    <h2 class="title-news">Nuestra mejor Seleccion</h2>
+    <h2 class="title-news">Nuestra mejor Selección</h2>
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="https://vinotecaligier.com/media/catalog/product/cache/98d3e2af1d4ebc2ba18bbd79978e0c99/b/e/be73767_base.jpg" alt=""> </div>
@@ -89,12 +89,12 @@
       <img src="./Assets/caja para vinos.png" alt="">
     </div>
     <div class="offer-text">
-      <h3>Con la compro de un vino mayor a $25.000 pesos recibis una caja porta vinos de regalo</h3>
+      <h3>Con la compra de un vino mayor a $25.000, recibís una caja porta vinos de regalo</h3>
     </div>
   </section>
   <!-- SECCION PRODUCTOS MALBEC-->
   <section id="products-Malbec">
-    <h2 class="title-products">Catalogo de Vinos Malbec</h2>
+    <h2 class="title-products">Catálogo de Vinos Malbec</h2>
     <div class="products-Malbec">
       <!-- TEMPLATE DE CADA PRODUCTO -->
       <template id="template-card">
@@ -113,7 +113,7 @@
   </section>
   <!-- SECCION PRODUCTOS CABERNET-->
   <section id="products-Cabernet">
-    <h2 class="title-products title-products-Cabernet">Cabernet </h2>
+    <h2 class="title-products title-products-Cabernet">Catálogo de Vinos Cabernet </h2>
     <div class="products-Cabernet">
       <!-- TEMPLATE DE CADA PRODUCTO -->
       <template id="template-card">
@@ -142,14 +142,14 @@
   <!-- VENTANA MODAL TIENE PRODUCTOS EN SU CARRITO -->
   <div class="modal-container visible modal-cart">
     <div class="modal">
-      <h2 class="red-p">Tenes productos guardados en tu carrito</h2>
-      <h2 class="red-p">Echale un ojo!</h2>
+      <h2 class="red-p">Tenés productos guardados en tu carrito</h2>
+      <h2 class="red-p">Échale un ojo!</h2>
       <img class="red-cart" src="./Assets/cart-go-svgrepo-com.svg" alt="">
     </div>
   </div>
   <!-- FOOTER -->
   <footer>
-    <p>Tenes alguna pregunta?</p>
+    <p>¿Tenés alguna pregunta?</p>
     <p>Contactanos</p>
     <div class="social">
       <a href=""><img src="./Assets/facebook-svgrepo-com(1).svg" alt=""></a>
