--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- FOOTER -->
   <footer>
     <p>¿Tenés alguna pregunta?</p>
-    <p>Contactanos</p>
+    <p>Contáctanos</p>
     <div class="social">
       <a href=""><img src="./Assets/facebook-svgrepo-com(1).svg" alt=""></a>
       <a href=""><img src="./Assets/instagram-svgrepo-com(1).svg" alt=""></a>
